# Margo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  QUICKSTART.md  docker-compose.yml  railway.toml  sprint-44.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b1bcb01510d_initial_tables.py  967d0c82564a_add_is_homemade_to_recipes.py  a2f8c3d4e5b6_add_alerts_table.py  af16fbd67992_add_ondelete_set_null_price_history_.py  b3c9d5e7f8a1_add_performance_indexes.py  b5eb7d745173_add_category_to_ingredients.py  c4d5e6f7g8h9_add_billing_and_multi_restaurant.py  d5e6f7g8h9i0_add_pg_trgm_extension.py  e1f2a3b4c5d6_add_cascade_delete_recipe_ingredients_ingredient_id.py
backend/app/: config.py  database.py  dependencies.py  logging_config.py  main.py
backend/app/middleware/: error_handler.py  plan_limits.py  rate_limit.py
backend/app/models/: __init__.py  alert.py  ingredient.py  ingredient_alias.py  invoice.py  price_history.py  recipe.py  restaurant.py
backend/scripts/: check_performance.py  normalize_units.py  setup_stripe.py  start.sh
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_billing.py  test_dashboard.py  test_edge_cases.py  test_email_inbound.py  test_export.py  test_health.py  test_ingredients.py  test_integration.py  test_invoices.py  test_matching.py  test_normalize.py  test_ocr.py  test_onboarding.py  test_parser_pdf.py  test_parser_xml.py  test_price_history.py  test_recipes.py  test_restaurants.py  test_simulator.py
frontend/: index.html  (+3 more)
(+93 files in other folders)
